--- a/templates/diary_details.html
+++ b/templates/diary_details.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1 class="title">{{ diary['date'] }}</h1>
+        <!-- <h1 class="title">{{ diary['date'] }}</h1> -->
         <div class="header-content">
             <a href="/">
                 <i class="fas fa-home"></i>
